Закончила все основные функции программы

--- a/TFLC_sem6_lab1/MainForm.resx
+++ b/TFLC_sem6_lab1/MainForm.resx
@@ -391,6 +391,115 @@
         0x39Jtxpwor+Ezb+3oT72lnpZH1GRkZGRkYkSv0Hu0RoHNmOLRsAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="аToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAACVlJREFUeF7tmntQVPcVx0knado/kibVqGlimzQoiCDC8lgeYQURRBbkLctDfOAy
+        6hgjFhytCmbiI4o6aEarY7QaH5GAIIISTbUCOoZYR22qYqyd1DTNNI+JdKYCRr4955fjjsvjEt1lY5j9
+        zHznXr7n3HPOfezde1ddnDhx4sSJE8eS34Sh+adRPu80WkSVcxvhJuH+Tf5JDC1sxFeFp4B7VXAKX3NM
+        0vovCxtQvqgR6E4LG1Emaf2XpfVoWdoAdKcl9bgpaf2X1+oBLUla/2XFSUBLktZ/Wf1nQEuS1n9ZdwLQ
+        kqT9eDEU4dFhM2Eeloc6Fxc8IraFDccBLUmaFcPzcGz4TCzwSMVPxXo4cTcjdoQZzSSw3GYgWEIWNtFO
+        aknSLHiYEXq33ogZuEKKkdDDA591rxkoJnWQ4EmDepmR2t0VsPVPgJYkzQqqGUm6wLVVj1yUPjRXg86M
+        Z32moclnOkBqI83jAyLhLmx/H9CSpHWBa1KffOkBWv/APwdDJPzDEDgdg3XT8De/aYDfVHziPw1BEuqR
+        XccALUlaj/jmQkf9rnFP3VQ004H4lYQci34yntNPQTMJgTn4i346fikhKzqfpb1HAS1JmqKnM+yfjQGB
+        U3BOel/RZeJZCTkGuuwfC5mMU6GTAVqe44EkZCF0Kn5L8QrS5/pU/Fxsl7L3AC1JmgtvE5KNf6saVEts
+        C4YcPBWajSY1QzY+cOg9ISwb6wzZQFgW/tHdmQ/LRBrl/JdzDFloGZOFQAm5HKgDtCRpLrwNb3u3Bi3p
+        pmqNwYSBFPtEckrE7lsiMhAzNhMdEZloizAhQGwLFH+N4hDti+50eVYfAbQkaQrelvq8I7U6xmZgmYQs
+        RGZCT347xyNNiBa7bzAY8Gh0Bi6TEJWB34ltIdqEYo7Rsn28CbPEtuLwYUBLkmYF1ZzNNVVfE5aKbYH8
+        QtU3A5d4RrHtT0w6Zk9IB0jNfB8QWxGThskSux1jQrLYXThaC2hJ0rowPh0pXFt6ZImt4FliJuGqipmQ
+        J7Z9SaWbTHwaPo+fBMSnI1FsRawJw+ImoYVjtJwudrccrwG0JGndQrXN0qMlLhWuYiuMaUhWsTR8Zu50
+        cuxCQjKSklKBxFRcEMtCYgrqOEbq9Red+kOAliStR6j/HjVHCmrFEvBIUgr+yjGadaKY9iMlGdWpyUBK
+        Il4VS5GcjDHspybhm4SErl+HnTldDWhJ0nrERHf+lCTc5J5pSQgTW0H+fDVjMirFsg8ZsXjalITbpkS0
+        0UfhGbEV5NeQQPq9WJo0HQS0JGma0BxLpOdBsRRZiRiUnoh2Fs35C7FtJyMBMVkJAKleLAU3zJyIdpbJ
+        iIFia3KOdlJLkqbJVDoJd/vyutiKrIlo5FkzExAllu1MmYhlJOTEY5VYCvJy2SdZnQktLlSi5WIV0IO+
+        kbReoVkOqd7xmCaWgvw14heJZTu5RhzJjQNyY63v/tON2MY+LV8Rq1cuHUDlpUqgB+2XtF6hnvPUTEZs
+        EUsxw4hk5cd1vknaQJ4RF0kwx8BLLIU5FueUb+z9LfAul6vg1lyBr68eAKxUgS9Jz0tar+TFIUR6nxVL
+        kRcLb/HPi2U7s2Lwr9kTgNnx1q+e5H3Gvjn6/t7GPq7E0OvlKLtegZusv1dg//3sPEM7+pyaKQafiqWY
+        Mx7Psz9rAm6IZTtzx+MWCTkG/EwsRU++I+Ce3JtnEEsxj94i2X8lGv8Ty3bmRaEtPxoo6vTK2ZPvCOhM
+        P86986PQKpaiJ98mCiPxVeE4gHbY6tWXvC/Ynz8Og8RyGAsjMJh7F0TiP2IpFo7HM935NrEoEs0kLI7E
+        CLEUi8biLPskvVgOY+E4hEjvJrEUi8MxUvljcVks21kSgVoSloyxfsamZn9kf3EE5ovlMKh3gZopHDvE
+        UpCfpGYKR7VYtlM8BmuWhQPLxli/ixeHY6ryw9EglsOgmU5zb1rmiKWgmZYpPxxviGU7yw1IIGF5GE6I
+        pVhOn0Pybr8ehm+Lghx3H1htwBCa587rBrQvD7V+FKZ5GnjWFQYYxbKd9QY8tfJlfEtqXRmKp8VWkHdw
+        VRhAWi1Wn7PqZZRIzyqxFCvGYsDKMLSzigLwpNj2YU0I6kpCgbUh1r+4rA5GEPslIbi1KgS/FrvPoJPx
+        As3SKj1DxVasCcUs8WvEsh9r9chYHwyQzqHTP3mtC8YhiR3oHLMnXHt9EKq417og6xcwiZ3n2NogpItt
+        P0rpAWNDED7dGAS8GYwJYis2BODFjXq0cIxylohtdzboUcQ9SDfXB+IFsRUbAxEvsRtFHn30YLYpAK9u
+        DgRoebGo06+vmwKRTupgbQ6ASWy7sVmPTEt9PdLEVmzR4TGa6yOe7Q96zBHb/uyg5+8t/vh4awCwJaDr
+        z+Jb/bFYYh2kVUUu+ImEHhi+tKnuAqp7h2uTFknIgsS575VSVzwudt+w3RfR2/0AUut2HXzFtkDe4rf8
+        0KFydDiwU/fgN8ZtPvgN1ariWlzzLV3Xn922+cOPZ1FxP0SK3bfQTr25SweQru0a1fX7f6cPJu3yRYvK
+        8cUtyl+zNxCDJdwrO/wxhLYtIbVyjZ2+uPm2r/Vlz3BNil1XOTqUit33HKbLbI8PmkjYPRofbnPDExKy
+        QAfmRYpVc47oDqlxjzcK9o1G8F5PDC6jmxXX4vXd3gjZ7YNC0inJ/W670Ti4z9v6hse8Td/zFDvLOdTn
+        DNeSkGPYo8PAd7xxZb83QMuzFd1cCQzFQkgH949CO+d+L3HuKFTxgZIyVvAB456Sf43/lpBjqaQzU+GF
+        q7TzKB+Fa7Te5Z5wFz5A73ohh5Y7SB+We+ELWraxeJ3UxDHOKRtt/Xh7L+96wo/6XKdc0DbN5XSfkNAP
+        Aw0yqNITTVWeAC1bq0aigL+WJGw3uGalFxaoHt/1OqN1oBwKf45rRmIjCaxDHrhYOxJGezwVcg2qF091
+        P1K1R6KD/i51+Gf++/CeO6KOuONq3QiARevnaTmzzqP7/z6jxTF3DDjsjllSQ9UjXTkywkFfdQ8KXw1H
+        3TD3qDtu0E5AyQ1t5NWTV0RKogPlyTvIZ5HF6+xxjHKL6e8Gym+/Z/t/kuZwbWnz8MPDnhgG04nhqD0+
+        DLdpifuRbFNDNdIfysv9fjjjiicbXBFX/xJWn3wJh2h5mfQlrbexeJ10idarSW/Uu8LY2M2zhRMnTpw4
+        cWJPXFz+D66h852nmG/vAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="аToolStripMenuItem1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAVsSURBVHhe7ZdbbFRVGIXnAXk0PmmsCYj0AgWL3AS0zaDY
+        +7TYaqEQBFpKr1gSYmkrYqPRQhFjYmKiiYmJJiYaQSNSaCgUC300+qyv1AcU4wUfGo3L/Q9rT+reZ86c
+        c2aOh5D5kpU96//X3llt56WxPHny5MmT5/9lcR82L+rFlDr/XNyLm4v6cOnBHsS5vrNZ0oMjD/UCTlrS
+        ixcZuzMp7EaiqBv/qHOusAuHS/pQICrswaDMkrsuVDJ+51HShcvLuoBlnRjkKIWaDcmupBNnOLp9WduJ
+        u1Z04OTKDvy0cj/gVyXtKOBTKWTmlM0o6dCBN+IjWMCnwqdsH06s6gCCis9YOGW9qqwDY3wm95S2YOGa
+        doytbsePa/YBWo/sx2OMeELfo7XItHdibRvK9T1qVum4dGYke9a14fj6NsAU157JdC/bd+dr3V4c4zp7
+        NuzB7Ma9wKa9t/7i8lmUXPpA38skxj0z/94G9Y2Qz9I5ucwF5bsBEa3lvaLvZRLjnjHvBX0nLfHnABGt
+        5aMm9H5P7gJEtJaPmtD7Ve4ERLSWj5rQ+9XuAES0lk9HzQ40qNxUbStuimpacal2JxJcp0W/n0mMB+7n
+        mUQrIKK1vBOJ7RjVOVP1rXiNMUec7jiJ8UD9fLF1GyCitbyJ2jXIvnEb5tR5uLEVBaKtLRjkDE9vz/xN
+        8Iq8J6LN2M83zS2AiNbyJk0tmJK9Oq1/etR8iPcvcpQ1fM9zP9+0PAOIaC1v0tKMP2Tf1IT7OUohM97/
+        nSML/X4mMe67n292NAMiWsub5GqfSYz77uebXU2AiNbyJtnu/WK+l+v3Y3u2AiJay5uo3S+yb2+0/+/f
+        XY8HZLe7ETc4yhqzj+mzRv0g8sOkHjS9SVsjJmSvziGOUuxrwDB35ziy0O+nE2MpzHm6XGD2NwAiWsub
+        dCQwkswkMNeZwJAqU9Cl/vJqNiwz7l5m3EK/n06MpTDn6XKB6akHRLSWn09vPZ7tqcPfOpNO3fX4S+Wa
+        eS0r9Ju0rv0CcaAOENFaXtPfgPv66nBDduo88nwN4uocV7ouUvOzMjtQi6PJN2rxc3cl7uX1wJh9TJ81
+        B2sAEa3lNf01GJG5Or/iKC391RhPZqtxlKMU+n1TXFuY+0x53xyqBkS0lteo2bfJXQ22cJSWQ1WoTGar
+        8A1HKfT7pri2MPeZ8r4ZqAJEtJbXDFTiN5mrr/ndHKXlYBz3SPaFKvzKUWDMPqbPmuGnABGt5TV67le8
+        HhjznVy9m+KlLYCI1vIaPfcrXg+M+U6u3k0x8gQgorV81ITe79XNgIjW8lETer/X44CI1vJRE3q/sQpA
+        RGv5qAm938lyQERreY2eO4kR14wWo7GBq5g5PAM4aWAGVxjz3C8wbz0OiGgtr9FzJzHimtFiNPbKNOAm
+        xjz3C8zbmwARreXD4s3LgJsYC7/fOxsBEa3lw+Ldi4CbGAu/33uPAiJay2v03EmMuGa0GI19dAFwE2Oe
+        +wXm/fWAiNbyGj13EiOuGS1GY6fPA25izHO/wHywDhDRWj4sJs4CbmIs/H4frgFEtJYPi6tnADcxFn6/
+        j1cDIlrLa/TcSYy4ZrQYjX33BeAmxjz3C8wnqwARreU1eu4kRlwzWozGvj+FKz+cBhx1CtOMee4XmM/K
+        ABGt5aMm9H6fPwyIaC0fNaH3+3IFIKK1fNSE3u9sKWbHSwGlcvH8fNv8Aub3ObccFfTXkstcMLEcx5Rg
+        iuvIcep2fjlGuc6eT0uxcLIExyaLMatOaF0ovvWNiJLJIlT8p1MJrqmeo9KZkdwzVYSxqWLgtlIRjrNe
+        +EzFsWB6KU58vRTXpwuBKJXsoLpIJ9bLkydPnjx5PBGL/QufNR1ohwMU1gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="аToolStripMenuItem2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAaXSURBVHhe7ZptbJX1GcbPN53TzUkyXTKXaFxg9IVC11KF
+        tvg23+biS1QG5aUvtKAmJigTKC8qwqKCBGNY3FRQg5hCzznFjtk5EVqIbpEWUGmJ+tH6dfTw2Z/3fe+u
+        WP1vrez/5JwP55dceXrd53qu+3lOz4EPfVJFihQpUqRIfKY8wKQrHqDlyvvpEg1duYwzcmRC+k926Ipl
+        ZEXNP2/mEq8tfH7WygVXtbHuqqWM/HIpxJB2idZqt68pTKa28ovJbQxMaQOV/NzzqzaaJy9lcnkDP/TY
+        uGhWz5nSSot2fN3XSn/JMi73WGGhN1/SyrAI+XlQNNtf+r/RLu3UbttRaG9CpXw0y5YwUL4Eylo4IP7H
+        /lI0tFO7bccS+nWnv5R/KppZJ2JaE4PfvvlH/sllK46wSXTsD0c4I2IcnfHsxlXvcanXGNMWcbHu8F1r
+        fJxfqhYwaUYjI5VNUNk49mO/spffrzzMGRHnokcPk5M3Yq7XGbpDd81o4nRNIfzvUN1Is4iqxfT4yFjV
+        x7z2Pr5slxtZ3ceeVYepfbhn/H8INdN+hLrVh+nUc7Vj1bfeBN2lO2c20uij/HH1YrpE1Cyi2Uep9e9y
+        2Zo+cmv7QI4P+fh7s7aX5d6R++bXoWYxLbZzMRkf5Y9ZCzk1eyFcM5/JPkqt72XTY3Lhoj0+OmekK61d
+        6/t40kcp3aU7RUM+yh/1DYzUL5A3oImLfJR64hDHn+iFxw9S66NU/SLOr2tgq+gLzf8XDdct4FnN+mmp
+        x3upt65DHPNRSndZXnb7KH9c1wAqt8bGXnIinvnGd/5aufnR7HiS7BY/Tb9OF2qXdvrIGM26zR83zAeV
+        W+OPh0Dl1rhhHl9o7vr5VPnoO9zYwEzLzGPYR0awL7A3L9w0D1RujacPgsqtEcqFiN2XOLfOBZVbY7Nc
+        rMqtEcqFiN2XOLffByq3xtZ3QeXWCOVCxO5LnDvuBZVbY5tcrMqtEcqFiN2XOHffAyq3xvMHQOXWCOVC
+        xO5LnHvvBpVbY7tcrMqtEcqFiN2XOHPvApVb44V3QOXWCOVCxO5LnPl3gsqt8Zd/gMqtEcqFiN2XOAvv
+        AJVb42W5WJVbI5QLEbsvcRp/Byq3xs63QeXWCOVCxO5LnJbbQeXWeFUuVuXWCOVCxO5LnLbfgsqtsevv
+        oHJrhHIhYvclzv23gcqtsbsHVG6NUC5E7L7EefAWULk1OuRiVW6NUC5E7L7EeehmULk19r4FKrdGKBci
+        dl/iLL8JVG6NjFysyq0RyoWI3Zc4K34DKrdG199A5dYI5ULE7kuclTeCyq3RLRercmuEciFi9yVO+/Wg
+        cmvs3w8qt0YoFyJ2X+Ksuw5Ubo2ev4LKrRHKhYjdlziPXQsqt8bbcrEqt0YoFyJ2X+JsmAMqt8aBblC5
+        NUK5ELH7EmdTHajcGgflYlVujVAuROy+xHmqFlRujb43QeXWCOVCxO5LnM2zQeXWOCIXq3JrhHIhYvcl
+        ztZZoHJrvL8PVG6NUC5E7L7Eee5qULk1/tUFKrfGczUMW7aGah99h22zqPHMmD+NBfsCe/PC8zWgcmt8
+        0EXuqFzwRx1c6CPNbRnNTkDP+Gmp9/fzI+06muW0j4zRrNv8sb2akT/NhBevOfvn8YEMxweydtF1Pkrt
+        qOd8yW7ZPpNhzYdkr1WzedvNnOenadcc7erPMuCjlO6yvOz2Uf54oZpTf66WN+DXZx+QOJFlo4jjGTp9
+        dM6cyJDVLjlu8FFKd+lO2Z3/ByRerCL7UhW8VH32EZkTXVz6YYbcRxn5GqRZ7uPvzYdpVmiHHEeOdfJT
+        H6derqJFd8obkfZR/thRSfPOSpDjmIekTnYy92SaLwflBgbTpOU459gEHpLSjGZPym9ez9WOjzPc5y8b
+        ukt37pxeAA9JvVLFpFenc/q1GfBK5djH5E7Jm3AqTU7EOamTkaG9Y29e9tTqLtn5746aAnmIelcFa1+f
+        Dq9XMLhjGhf72PhMvg6fdvKkqF+UEzGONNP/SScb5Pj1x17RbtkzpLt2Tafdx/lnXyUXvFFBv4jdFRzo
+        qIz/qGxGbl67fcdR+e3/wF8qDHaXcPmeMj7fUw4d5QyKoj0sLb210juk3bpDd/lLhUVGLixdSn+6DFSd
+        ZfSIWvaWMqWnfOKPy2tWz9FztWO0T7qP6g6PFSb6dciWsCZbyumuUogh6yphdcF97P8Xb03lkjdLaeou
+        IdM9lUE55kRMUDk/J7NvKo3dZfzEa4sUKVKkSJFopFJfAfZva36UKKlZAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="MainMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>147, 17</value>
   </metadata>
